--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,12 +21,12 @@
 .text-gradient {
   background: radial-gradient(
     64.18% 64.18% at 71.16% 35.69%,
-    #def9fa 0.89%,
-    #bef3f5 17.23%,
-    #9dedf0 42.04%,
-    #7de7eb 55.12%,
-    #5ce1e6 71.54%,
-    #33bbcf 100%
+    #f8fdb5 0.89%,
+    rgb(231, 245, 190) 17.23%,
+    #e8f09d 42.04%,
+    #ebdc7d 55.12%,
+    rgb(225, 230, 92) 71.54%,
+    #eaed2f 100%
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
